Make JSkat compatible with JDK 11