@@ -7,3 +7,12 @@ dependencies {
 	compile "org.openjfx:javafx-controls:11.0.1:$platform"
 	compile "org.openjfx:javafx-swing:11.0.1:$platform"
 }
+
+compileJava {
+	doFirst {
+		options.compilerArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules', 'javafx.controls'
+		]
+	}
+}
